--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
 }
 
 @article{foroutan2024assessing,
+  bibtex_show={true},
   title={Assessing heat vulnerability in Philadelphia using geographically weighted principal component analysis (GWPCA): A geospatial big data-driven approach},
   author={Foroutan, Ehsan and Hu, Tao and Zhang, Fan and Yu, Hongbo},
   journal={International Journal of Applied Earth Observation and Geoinformation},
