--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -83,3 +83,14 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+@article{liu2020spatiotemporal,
+  title={Spatiotemporal patterns of COVID-19 impact on human activities and environment in mainland China using nighttime light and air quality data},
+  author={Liu, Qian and Sha, Dexuan and Liu, Wei and Houser, Paul and Zhang, Luyao and Hou, Ruizhi and Lan, Hai and Flynn, Colin and Lu, Mingyue and Hu, Tao and others},
+  journal={Remote Sensing},
+  volume={12},
+  number={10},
+  pages={1576},
+  year={2020},
+  publisher={MDPI}
+}
