--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,7 @@
 }
 
 @article{liu2020spatiotemporal,
+  bibtex_show={true},
   title={Spatiotemporal patterns of COVID-19 impact on human activities and environment in mainland China using nighttime light and air quality data},
   author={Liu, Qian and Sha, Dexuan and Liu, Wei and Houser, Paul and Zhang, Luyao and Hou, Ruizhi and Lan, Hai and Flynn, Colin and Lu, Mingyue and Hu, Tao and others},
   journal={Remote Sensing},
