--- a/_bibliography/publication.bib
+++ b/_bibliography/publication.bib
@@ -14,3 +14,766 @@
   abbr={MDPI}
 }
 
+@article{huang2014mpca,
+  title={An MPCA/LDA based dimensionality reduction algorithm for face recognition},
+  author={Huang, Jun and Su, Kehua and El-Den, Jamal and Hu, Tao and Li, Junlong and others},
+  journal={Mathematical Problems in Engineering},
+  volume={2014},
+  year={2014},
+  publisher={Hindawi}
+}
+
+@article{hu2013efficient,
+  title={Efficient interaction recognition through positive action representation},
+  author={Hu, Tao and Zhu, Xinyan and Guo, Wei and Su, Kehua},
+  journal={Mathematical Problems in Engineering},
+  volume={2013},
+  year={2013},
+  publisher={Hindawi}
+}
+
+@article{guo2012multi,
+  title={A Multi-granularity Parallel Model for Unified Remote Sensing Image Processing W eb S ervices},
+  author={Guo, Wei and Zhu, Xinyan and Hu, Tao and Fan, LiWei},
+  journal={Transactions in GIS},
+  volume={16},
+  number={6},
+  pages={845--866},
+  year={2012}
+}
+
+@inproceedings{hu2012vehicle,
+  title={A Vehicle Tracing Approach Based on Video and Road Network},
+  author={Hu, Tao and Chen, Xu and Zhu, Xinyan and Guo, Wei},
+  booktitle={2012 Fifth International Symposium on Computational Intelligence and Design},
+  volume={2},
+  pages={376--380},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{hu2011collection,
+  title={Collection and remote management of disaster information with mobile positioning terminals},
+  author={Hu, Tao and Zhu, Xinyan and Su, Kehua and Duan, Lian},
+  booktitle={2011 19th International Conference on Geoinformatics},
+  pages={1--5},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{朱欣焰2015全息位置地图概念内涵及其关键技术初探,
+  title={全息位置地图概念内涵及其关键技术初探},
+  author={朱欣焰 and 周成虎 and 呙维 and 胡涛 and 刘洪强 and 高文秀 and others},
+  journal={武汉大学学报 (信息科学版)},
+  volume={40},
+  number={3},
+  pages={285G295},
+  year={2015},
+  publisher={武汉大学学报 (信息科学版)}
+}
+
+@article{呙维2014基于,
+  title={基于 Kinect 的深度数据融合方法},
+  author={呙维 and 胡涛 and 朱欣焰},
+  journal={计算机应用研究},
+  volume={31},
+  number={1},
+  pages={285--288},
+  year={2014}
+}
+
+@article{zhang2016urban,
+  title={Urban link travel time prediction based on a gradient boosting method considering spatiotemporal correlations},
+  author={Zhang, Faming and Zhu, Xinyan and Hu, Tao and Guo, Wei and Chen, Chen and Liu, Lingjia},
+  journal={ISPRS International Journal of Geo-Information},
+  volume={5},
+  number={11},
+  pages={201},
+  year={2016},
+  publisher={MDPI}
+}
+
+@article{zhang2016analyzing,
+  title={Analyzing urban human mobility patterns through a thematic model at a finer scale},
+  author={Zhang, Faming and Zhu, Xinyan and Guo, Wei and Ye, Xinyue and Hu, Tao and Huang, Liang},
+  journal={ISPRS International Journal of Geo-Information},
+  volume={5},
+  number={6},
+  pages={78},
+  year={2016},
+  publisher={MDPI}
+}
+
+@article{tang2017non,
+  title={Non-homogeneous diffusion of residential crime in urban China},
+  author={Tang, Yicheng and Zhu, Xinyan and Guo, Wei and Ye, Xinyue and Hu, Tao and Fan, Yaxin and Zhang, Faming},
+  journal={Sustainability},
+  volume={9},
+  number={6},
+  pages={934},
+  year={2017},
+  publisher={MDPI}
+}
+
+@article{duan2017prediction,
+  title={Prediction of suspect location based on spatiotemporal semantics},
+  author={Duan, Lian and Ye, Xinyue and Hu, Tao and Zhu, Xinyan},
+  journal={ISPRS International Journal of Geo-Information},
+  volume={6},
+  number={7},
+  pages={185},
+  year={2017},
+  publisher={MDPI}
+}
+
+@article{guo2012kinect,
+  title={Kinect-based real-time RGB-D image fusion method},
+  author={Guo, Wei and Du, Tangwu and Zhu, Xinyan and Hu, T},
+  journal={The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  volume={39},
+  pages={275--279},
+  year={2012},
+  publisher={Copernicus GmbH}
+}
+
+@article{duan2017deep,
+  title={Deep Convolutional Neural Networks for Spatiotemporal Crime Prediction},
+  author={Duan, Lian and Hu, Tao and Cheng, En and Zhu, Jianfeng and Gao, Chao},
+  year={2017}
+}
+
+@article{li2017tackling,
+  title={Tackling Innovation Networks with Smart Data: A Case Study of the Liquid Crystal Institute at Kent State University},
+  author={Li, Hongshan and Zeng, Marcia and Zhang, Yin and Ye, Xinyue and Hu, Tao},
+  year={2017}
+}
+
+@inproceedings{hu2017integrating,
+  title={Integrating near repeat and social network approaches to analyze crime patterns},
+  author={Hu, Tao and Ye, Xinyue and Duan, Lian and Zhu, Xinyan},
+  booktitle={2017 25th International Conference on Geoinformatics},
+  pages={1--4},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{hu2019human,
+  title={Human action recognition based on scene semantics},
+  author={Hu, Tao and Zhu, Xinyan and Guo, Wei and Wang, Shaohua and Zhu, Jianfeng},
+  journal={Multimedia Tools and Applications},
+  volume={78},
+  pages={28515--28536},
+  year={2019},
+  publisher={Springer US}
+}
+
+@article{hu2018depth,
+  title={Depth sensor based human detection for indoor surveillance},
+  author={Hu, Tao and Zhang, Hao and Zhu, Xinyan and Clunis, Julaine and Yang, Gelan},
+  journal={Future Generation Computer Systems},
+  volume={88},
+  pages={540--551},
+  year={2018},
+  publisher={North-Holland}
+}
+
+@article{hu2019human,
+  title={Human interaction recognition using spatial-temporal salient feature},
+  author={Hu, Tao and Zhu, Xinyan and Wang, Shaohua and Duan, Lian},
+  journal={Multimedia Tools and Applications},
+  volume={78},
+  pages={28715--28735},
+  year={2019},
+  publisher={Springer US}
+}
+
+@article{yue2018modelling,
+  title={Modelling the effects of street permeability on burglary in Wuhan, China},
+  author={Yue, Han and Zhu, Xinyan and Ye, Xinyue and Hu, Tao and Kudva, Sonali},
+  journal={Applied geography},
+  volume={98},
+  pages={177--183},
+  year={2018},
+  publisher={Pergamon}
+}
+
+@article{hu2018urban,
+  title={Urban crime prediction based on spatio-temporal Bayesian model},
+  author={Hu, Tao and Zhu, Xinyan and Duan, Lian and Guo, Wei},
+  journal={PloS one},
+  volume={13},
+  number={10},
+  year={2018}
+}
+
+@article{she2019bridging,
+  title={Bridging open source tools and Geoportals for interactive spatial data analytics},
+  author={She, Bing and Hu, Tao and Zhu, Xinyan and Bao, Shuming},
+  journal={Geo-spatial Information Science},
+  volume={22},
+  number={3},
+  pages={185--192},
+  year={2019}
+}
+
+@article{zhu2019development,
+  title={Development and implementation of a dynamic and 4D GIS based on semantic location model},
+  author={Zhu, Xinyan and Hu, Tao and Ye, Xinyue and Guo, Wei and Huang, Liang and Xiong, Hanjiang and Ai, Haojun and She, Bing and Xiong, Qing and Duan, Lian},
+  journal={Geo-spatial Information Science},
+  volume={22},
+  number={3},
+  pages={193--213},
+  year={2019}
+}
+
+@article{hu2019systematic,
+  title={A systematic spatial and temporal sentiment analysis on geo-tweets},
+  author={Hu, Tao and She, Bing and Duan, Lian and Yue, Han and Clunis, Julaine},
+  journal={Ieee Access},
+  volume={8},
+  pages={8658--8667},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{liu2020spatiotemporal,
+  title={Spatiotemporal patterns of COVID-19 impact on human activities and environment in mainland China using nighttime light and air quality data},
+  author={Liu, Qian and Sha, Dexuan and Liu, Wei and Houser, Paul and Zhang, Luyao and Hou, Ruizhi and Lan, Hai and Flynn, Colin and Lu, Mingyue and Hu, Tao and others},
+  journal={Remote Sensing},
+  volume={12},
+  number={10},
+  pages={1576},
+  year={2020},
+  publisher={MDPI}
+}
+
+@article{yang2020taking,
+  title={Taking the pulse of COVID-19: A spatiotemporal perspective},
+  author={Yang, Chaowei and Sha, Dexuan and Liu, Qian and Li, Yun and Lan, Hai and Guan, Weihe Wendy and Hu, Tao and Li, Zhenlong and Zhang, Zhiran and Thompson, John Hoot and others},
+  journal={International journal of digital earth},
+  volume={13},
+  number={10},
+  pages={1186--1211},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{hu2020racial,
+  title={Racial segregation, testing sites access, and COVID-19 incidence rate in Massachusetts, USA},
+  author={Hu, Tao and Yue, Han and Wang, Changzhen and She, Bing and Ye, Xinyue and Liu, Regina and Zhu, Xinyan and Bao, Shuming},
+  journal={International Journal of Environmental Research and Public Health},
+  volume={17},
+  number={24},
+  year={2020}
+}
+
+@article{hu2020building,
+  title={Building an Open Resources Repository for COVID-19 Research},
+  author={Hu, Tao and Guan, Weihe Wendy and Zhu, Xinyan and Shao, Yuanzheng and Liu, Lingbo and Du, Jing and Liu, Hongqiang and Zhou, Huan and Wang, Jialei and She, Bing and others},
+  journal={Data and Information Management},
+  volume={4},
+  number={3},
+  pages={148--170},
+  year={2020},
+  publisher={Sciendo}
+}
+
+@article{wang2020examining,
+  title={Examining the change of human mobility adherent to social restriction policies and its effect on COVID-19 cases in Australia},
+  author={Wang, Siqin and Liu, Yan and Hu, Tao},
+  journal={International journal of environmental research and public health},
+  volume={17},
+  number={21},
+  pages={7930},
+  year={2020},
+  publisher={MDPI}
+}
+
+@article{hu2021spatial,
+  title={A spatial--temporal network analysis of patent transfers from US universities to firms},
+  author={Hu, Tao and Zhang, Yin},
+  journal={Scientometrics},
+  volume={126},
+  number={1},
+  pages={27--54},
+  year={2021},
+  publisher={Springer International Publishing}
+}
+
+@article{yan2020does,
+  title={How does scholarly use of academic social networking sites differ by academic discipline? A case study using ResearchGate},
+  author={Yan, Weiwei and Zhang, Yin and Hu, Tao and Kudva, Sonali},
+  journal={Information Processing \& Management},
+  volume={58},
+  number={1},
+  pages={102430},
+  year={2020},
+  publisher={Pergamon}
+}
+
+@article{sha2021spatiotemporal,
+  title={A spatiotemporal data collection of viral cases for COVID-19 rapid response},
+  author={Sha, Dexuan and Liu, Yi and Liu, Qian and Li, Yun and Tian, Yifei and Beaini, Fayez and Zhong, Cheng and Hu, Tao and Wang, Zifu and Lan, Hai and others},
+  journal={Big Earth Data},
+  volume={5},
+  number={1},
+  pages={90--111},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal characteristics and factor analysis of SARS-CoV-2 infections among healthcare workers in Wuhan, China},
+  author={Wang, Peixiao and Ren, Hui and Zhu, Xinyan and Fu, Xiaokang and Liu, Hongqiang and Hu, Tao},
+  journal={Journal of Hospital Infection},
+  volume={110},
+  pages={172--177},
+  year={2021},
+  publisher={WB Saunders}
+}
+
+@article{peng2021estimating,
+  title={Estimating unreported COVID-19 cases with a time-varying SIR regression model},
+  author={Peng, Zhenghong and Ao, Siya and Liu, Lingbo and Bao, Shuming and Hu, Tao and Wu, Hao and Wang, Ru},
+  journal={International Journal of Environmental Research and Public Health},
+  volume={18},
+  number={3},
+  pages={1090},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{zhang2022human,
+  title={Human mobility and COVID-19 transmission: a systematic review and future directions},
+  author={Zhang, Mengxi and Wang, Siqin and Hu, Tao and Fu, Xiaokang and Wang, Xiaoyue and Hu, Yaxin and Halloran, Briana and Li, Zhenlong and Cui, Yunhe and Liu, Haokun and others},
+  journal={Annals of GIS},
+  volume={28},
+  number={4},
+  pages={501--514},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal Differences of COVID-19 Infection Among Healthcare Workers and Patients in China From January to March 2020},
+  author={Wang, Peixiao and Zhu, Xinyan and Guo, Wei and Ren, Hui and Hu, Tao},
+  journal={Ieee Access},
+  volume={9},
+  pages={28646--28657},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{wang2021bibliometric,
+  title={A bibliometric analysis and network visualisation of human mobility studies from 1990 to 2020: Emerging trends and future research directions},
+  author={Wang, Siqin and Zhang, Mengxi and Hu, Tao and Fu, Xiaokang and Gao, Zhe and Halloran, Briana and Liu, Yan},
+  journal={Sustainability},
+  volume={13},
+  number={10},
+  pages={5372},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{hu2021human,
+  title={Human Mobility Data in the COVID-19 Pandemic: Characteristics, Applications, and Challenges},
+  author={Hu, Tao and Wang, Siqin and She, Bing and Zhang, Mengxi and Huang, Xiao and Cui, Yunhe and Khuri, Jacob and Hu, Yaxin and Fu, Xiaokang and Wang, Xiaoyue and others},
+  journal={International Journal of Digital Earth},
+  year={2021}
+}
+
+@article{li2021odt,
+  title={ODT FLOW: Extracting, analyzing, and sharing multi-source multi-scale human mobility},
+  author={Li, Zhenlong and Huang, Xiao and Hu, Tao and Ning, Huan and Ye, Xinyue and Huang, Binghu and Li, Xiaoming},
+  journal={Plos one},
+  volume={16},
+  number={8},
+  pages={e0255259},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{yue2021geographical,
+  title={Geographical detector-based spatial modeling of the COVID-19 mortality rate in the continental United States},
+  author={Yue, Han and Hu, Tao},
+  journal={International journal of environmental research and public health},
+  volume={18},
+  number={13},
+  pages={6832},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{hu2021revealing,
+  title={Revealing public opinion towards COVID-19 vaccines with Twitter data in the United States: spatiotemporal perspective},
+  author={Hu, Tao and Wang, Siqin and Luo, Wei and Zhang, Mengxi and Huang, Xiao and Yan, Yingwei and Liu, Regina and Ly, Kelly and Kacker, Viraj and She, Bing and others},
+  journal={Journal of Medical Internet Research},
+  volume={23},
+  number={9},
+  pages={e30854},
+  year={2021},
+  publisher={JMIR Publications Toronto, Canada}
+}
+
+@article{liu2021spatiotemporal,
+  title={The spatiotemporal interaction effect of COVID-19 transmission in the United States},
+  author={Liu, Lingbo and Hu, Tao and Bao, Shuming and Wu, Hao and Peng, Zhenghong and Wang, Ru},
+  journal={ISPRS International Journal of Geo-Information},
+  volume={10},
+  number={6},
+  pages={387},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{wang2022times,
+  title={The times, they are a-changin’: tracking shifts in mental health signals from early phase to later phase of the COVID-19 pandemic in Australia},
+  author={Wang, Siqin and Huang, Xiao and Hu, Tao and Zhang, Mengxi and Li, Zhenlong and Ning, Huan and Corcoran, Jonathan and Khan, Asaduzzaman and Liu, Yan and Zhang, Jiajia and others},
+  journal={BMJ Global Health},
+  pages={https--gh},
+  year={2022}
+}
+
+@article{wang2022multi,
+  title={A multi-view bidirectional spatiotemporal graph network for urban traffic flow imputation},
+  author={Wang, Peixiao and Zhang, Tong and Zheng, Yueming and Hu, Tao},
+  journal={International Journal of Geographical Information Science},
+  volume={36},
+  number={6},
+  pages={1231--1257},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+
+@article{wang2022exploring,
+  title={Exploring the impact of under-reported cases on the COVID-19 spatiotemporal distributions using healthcare workers infection data},
+  author={Wang, Peixiao and Hu, Tao and Liu, Hongqiang and Zhu, Xinyan},
+  journal={Cities},
+  volume={123},
+  pages={103593},
+  year={2022},
+  publisher={Pergamon}
+}
+
+@article{wang2022hybrid,
+  title={A hybrid data-driven framework for spatiotemporal traffic flow data imputation},
+  author={Wang, Peixiao and Hu, Tao and Gao, Fei and Wu, Ruijie and Guo, Wei and Zhu, Xinyan},
+  journal={IEEE Internet of Things Journal},
+  volume={9},
+  number={17},
+  pages={16343--16352},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{yue2023examining,
+  title={Examining the effect of housing density and composition on residential burglary in Wuhan, China},
+  author={Yue, Han and Hu, Tao and Duan, Lian},
+  journal={Journal of Housing and the Built Environment},
+  volume={38},
+  number={1},
+  pages={399--417},
+  year={2023},
+  publisher={Springer Netherlands Dordrecht}
+}
+
+@article{wang2022urban,
+  title={Urban-regional disparities in mental health signals in Australia during the COVID-19 pandemic: a study via Twitter data and machine learning models},
+  author={Wang, Siqin and Zhang, Mengxi and Huang, Xiao and Hu, Tao and Li, Zhenlong and Sun, Qian Chayn and Liu, Yan},
+  journal={Cambridge Journal of Regions, Economy and Society},
+  volume={15},
+  number={3},
+  pages={663--682},
+  year={2022},
+  publisher={Oxford University Press UK}
+}
+
+@article{wang2022urban,
+  title={Urban--rural disparity of social vulnerability to natural hazards in Australia},
+  author={Wang, Siqin and Zhang, Mengxi and Huang, Xiao and Hu, Tao and Sun, Qian Chayn and Corcoran, Jonathan and Liu, Yan},
+  journal={Scientific reports},
+  volume={12},
+  number={1},
+  pages={13665},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{chen2022measurement,
+  title={Measurement of contagion spatial spread probability in public places: A case study on COVID-19},
+  author={Chen, Lu and Liu, Xiuyan and Hu, Tao and Bao, Shuming and Ye, Xinyue and Ma, Ning and Zhou, Xiaoxue},
+  journal={Applied Geography},
+  volume={143},
+  pages={102700},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{wang2022subways,
+  title={Subways and the Diffusion of Knowledge: Evidence from China},
+  author={Wang, Qiao and Liu, Xiuyan and Zhang, Fan and Hu, Tao},
+  journal={China \& World Economy},
+  volume={30},
+  number={4},
+  pages={60--99},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{huang2022social,
+  title={Social media mining under the COVID-19 context: Progress, challenges, and opportunities},
+  author={Huang, Xiao and Wang, Siqin and Zhang, Mengxi and Hu, Tao and Hohl, Alexander and She, Bing and Gong, Xi and Li, Jianxin and Liu, Xiao and Gruebner, Oliver and others},
+  journal={International Journal of Applied Earth Observation and Geoinformation},
+  volume={113},
+  pages={102967},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{wang2023urban,
+  title={Urban traffic flow prediction: A dynamic temporal graph network considering missing values},
+  author={Wang, Peixiao and Zhang, Yan and Hu, Tao and Zhang, Tong},
+  journal={International Journal of Geographical Information Science},
+  volume={37},
+  number={4},
+  pages={885--912},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
+@article{wang2023global,
+  title={A global portrait of expressed mental health signals towards COVID-19 in social media space},
+  author={Wang, Siqin and Huang, Xiao and Hu, Tao and She, Bing and Zhang, Mengxi and Wang, Ruomei and Gruebner, Oliver and Imran, Muhammad and Corcoran, Jonathan and Liu, Yan and others},
+  journal={International Journal of Applied Earth Observation and Geoinformation},
+  volume={116},
+  pages={103160},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{phil2022challenges,
+  title={Challenges and opportunities of the spatiotemporal responses to the global pandemic of COVID-19},
+  author={Phil Yang, Chaowei and Bao, Shuming and Guan, Wendy and Howell, Kate and Hu, Tao and Lan, Hai and Li, Yun and Liu, Qian and Smith, Jennifer and Srirenganathan, Anusha and others},
+  journal={Annals of GIS},
+  volume={28},
+  number={4},
+  pages={425--434},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+
+@article{gong2023understanding,
+  title={Understanding public perspectives on fracking in the United States using social media big data},
+  author={Gong, Xi and Lu, Yujian and Beene, Daniel and Li, Ziqi and Hu, Tao and Morgan, Melinda and Lin, Yan},
+  journal={Annals of GIS},
+  volume={29},
+  number={1},
+  pages={21--35},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
+@article{gitter2023not,
+  title={Not a waste: Wastewater surveillance to enhance public health},
+  author={Gitter, Anna and Oghuan, Jeremiah and Godbole, Anuja Rajendra and Chavarria, Carlos A and Monserrat, Carlos and Hu, Tao and Wang, Yun and Maresso, Anthony W and Hanson, Blake M and Mena, Kristina D and others},
+  journal={Frontiers in Chemical Engineering},
+  volume={4},
+  pages={1112876},
+  year={2023},
+  publisher={Frontiers}
+}
+
+@article{phan2023making,
+  title={Making waves: Integrating wastewater surveillance with dynamic modeling to track and predict viral outbreaks},
+  author={Phan, Tin and Brozak, Samantha and Pell, Bruce and Oghuan, Jeremiah and Gitter, Anna and Hu, Tao and Ribeiro, Ruy M and Ke, Ruian and Mena, Kristina D and Perelson, Alan S and others},
+  journal={Water Research},
+  volume={243},
+  pages={120372},
+  year={2023},
+  publisher={Pergamon}
+}
+
+@article{liu2021spatiotemporal,
+  title={The Spatiotemporal Interaction Effect of COVID-19 Transmission in the United States (preprint)},
+  author={Liu, Lingbo and Hu, Tao and Bao, Shuming and Wu, Hao and Peng, Zhenghong and Wang, Ru},
+  year={2021}
+}
+
+@incollection{yankey2023spatiotemporal,
+  title={Spatiotemporal Bayesian Regression},
+  author={Yankey, Ortis and Hu, Tao and Yue, Han and Wang, Peixiao and Xu, Xiao},
+  booktitle={Spatiotemporal Analytics},
+  pages={175--206},
+  year={2023},
+  publisher={CRC Press}
+}
+
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal Estimation of COVID-19 Outbreak Using Infection Data of Healthcare Workers},
+  author={Wang, P and Hu, T and Bao, S and Liu, H and Zhu, X},
+  year={2021}
+}
+
+@article{zhang2017sparse,
+  title={Sparse Link Travel Time Estimation Using Big Data of Floating Car},
+  author={ZHANG, Faming and ZHU, Xinyan and GUO, Wei and HU, Tao},
+  journal={Geomatics and Information Science of Wuhan University},
+  volume={42},
+  number={1},
+  pages={56--62},
+  year={2017}
+}
+
+@article{wang2022traffic,
+  title={Traffic condition estimation and data quality assessment for signalized road networks using massive vehicle trajectories},
+  author={Wang, Peixiao and Zhang, Tong and Hu, Tao},
+  journal={Journal of Ambient Intelligence and Humanized Computing},
+  pages={1--18},
+  year={2022},
+  publisher={Springer Berlin Heidelberg Berlin/Heidelberg}
+}
+
+@article{huangresearch,
+  title={Research Article An MPCA/LDA Based Dimensionality Reduction Algorithm for Face Recognition},
+  author={Huang, Jun and Su, Kehua and El-Den, Jamal and Hu, Tao and Li, Junlong}
+}
+
+@article{hu2019moving,
+  title={A moving object detection method combining color and depth data},
+  author={HU, Tao and ZHU, Xinyan and GUO, Wei and ZHANG, Faming},
+  journal={武汉大学学报 (信息科学版)},
+  volume={44},
+  number={2},
+  pages={276--282},
+  year={2019},
+  publisher={武汉大学学报 (信息科学版)}
+}
+
+@article{yang2020taking,
+  title={Taking the pulse of COVID-19: A spatiotemporal perspective (preprint)},
+  author={Yang, Chaowei and Sha, Dexuan and Liu, Qian and Li, Yun and Lan, Hai and Guan, Weihe Wendy and Hu, Tao and Li, Zhenlong and Zhang, Zhiran and Thompson, John Hoot and others},
+  year={2020}
+}
+
+@article{li2021odt,
+  title={ODT FLOW: A Scalable Platform for Extracting, Analyzing, and Sharing Multi-source Multi-scale Human Mobility (preprint)},
+  author={Li, Zhenlong and Huang, Xiao and Hu, Tao and Ning, Huan and Ye, Xinyue and Li, Xiaoming},
+  year={2021}
+}
+
+@article{kaijian2020research,
+  title={Research on parallel deep learning for heterogeneous computing architecture},
+  author={Kaijian, Xia and Hu, Tao and Wen, Si},
+  journal={Journal of Grid Computing},
+  volume={18},
+  number={2},
+  pages={177--179},
+  year={2020},
+  publisher={Springer Nature BV}
+}
+
+@article{duan2019spatio,
+  title={Spatio-temporal prediction of suspect location by spatio-temporal semantics},
+  author={DUAN, Lian and HU, Tao and ZHU, Xinyan and YE, Xinyue and WANG, Shaohua},
+  journal={武汉大学学报 (信息科学版)},
+  volume={44},
+  number={5},
+  pages={765--770},
+  year={2019},
+  publisher={武汉大学学报 (信息科学版)}
+}
+
+@article{wang2023public,
+  title={Public surveillance of social media for suicide using advanced deep learning models in Japan: time series study from 2012 to 2022},
+  author={Wang, Siqin and Ning, Huan and Huang, Xiao and Xiao, Yunyu and Zhang, Mengxi and Yang, Ellie Fan and Sadahiro, Yukio and Liu, Yan and Li, Zhenlong and Hu, Tao and others},
+  journal={Journal of medical internet research},
+  volume={25},
+  pages={e47225},
+  year={2023},
+  publisher={JMIR Publications Toronto, Canada}
+}
+
+@article{jin2020special,
+  title={Special Issue on AI-Driven Smart Networking and Communication for Personal Internet of Things: Part II},
+  author={Jin, Yong and Gao, Honghao and Hu, Tao and Li, Xinrong},
+  journal={International Journal of Wireless Information Networks},
+  volume={27},
+  pages={207--208},
+  year={2020},
+  publisher={Springer US}
+}
+
+@article{wangsocial,
+  title={Social media space provides public surveillance for suicide: 10-year study in Japan using advanced deep learning models},
+  author={Wang, Siqin and Ning, Huan and Xiao, Huang and Xiao, Yunyu and Zhang, Mengxi and Yang, Fan and Sadahiro, Yukio and Liu, Yan and Li, Zhenlong and Hu, Tao and others}
+}
+
+@article{hu2020racial,
+  title={Racial segregation, testing sites access, and COVID-19 incidence rate in Massachusetts, USA (preprint)},
+  author={Hu, Tao and Yue, Han and Wang, Changzhen and She, Bing and Ye, Xinyue and Liu, Regina and Zhu, Xinyan and Bao, Shuming},
+  year={2020}
+}
+
+@article{hu2021human,
+  title={Human Mobility Data in the COVID-19 Pandemic: Characteristics, Applications, and Challenges (preprint)},
+  author={Hu, Tao and Wang, Siqin and She, Bing and Zhang, Mengxi and Huang, Xiao and Cui, Yunhe and Khuri, Jacob and Hu, Yaxin and Fu, Xiaokang and Wang, Xiaoyue and others},
+  year={2021}
+}
+
+@article{hu2021revealing,
+  title={Revealing public opinion towards COVID-19 vaccines using Twitter data in the United States: a spatiotemporal perspective (preprint)},
+  author={Hu, Tao and Wang, Siqin and Luo, Wei and Yan, Yingwei and Zhang, Mengxi and Huang, Xiao and Liu, Regina and Ly, Kelly and Kacker, Viraj and Li, Zhelong},
+  year={2021}
+}
+
+@article{zhang2021human,
+  title={Human mobility and COVID-19 transmission: a systematic review and future directions (preprint)},
+  author={Zhang, Mengxi and Wang, Siqin and Hu, Tao and Fu, Xiaokang and Wang, Xiaoyue and Hu, Yaxin and Halloran, Briana and Cui, Yunhe and Liu, Haokun and Liu, Zhimin and others},
+  year={2021}
+}
+
+@article{hu2021building,
+  title={Building an Open Resources Repository for Covid-19 Research (preprint)},
+  author={Hu, Tao and Guan, Weihe Wendy and Zhu, Xinyan and Shao, Yuanzheng and Liu, Lingbo and Du, Jing and Liu, Hongqiang and Zhou, Huan and Wang, Jialei and She, Bing and others},
+  year={2021}
+}
+
+@incollection{hu2023actionable,
+  title={Actionable Environmental Science Through Social Media Platforms},
+  author={Hu, Tao and Huang, Xiao and Wang, Siqin},
+  booktitle={Actionable Science of Global Environment Change: From Big Data to Practical Research},
+  pages={355--371},
+  year={2023},
+  publisher={Springer International Publishing Cham}
+}
+
+@article{mao20234d,
+  title={A 4D Theoretical Framework for Measuring Topic-Specific Influence on Twitter: Development and Usability Study on Dietary Sodium Tweets},
+  author={Mao, Lingchao and Chu, Emily and Gu, Jinghong and Hu, Tao and Weiner, Bryan J and Su, Yanfang},
+  journal={Journal of Medical Internet Research},
+  volume={25},
+  pages={e45897},
+  year={2023},
+  publisher={JMIR Publications Toronto, Canada}
+}
+
+@article{huang2024crowdsourcing,
+  title={Crowdsourcing Geospatial Data for Earth and Human Observations: A Review},
+  author={Huang, Xiao and Wang, Siqin and Yang, Di and Hu, Tao and Chen, Meixu and Zhang, Mengxi and Zhang, Guiming and Biljecki, Filip and Lu, Tianjun and Zou, Lei and others},
+  journal={Journal of Remote Sensing},
+  volume={4},
+  pages={0105},
+  year={2024},
+  publisher={AAAS}
+}
+
+@article{foroutan2024assessing,
+  title={Assessing heat vulnerability in Philadelphia using geographically weighted principal component analysis (GWPCA): A geospatial big data-driven approach},
+  author={Foroutan, Ehsan and Hu, Tao and Zhang, Fan and Yu, Hongbo},
+  journal={International Journal of Applied Earth Observation and Geoinformation},
+  volume={127},
+  pages={103653},
+  year={2024},
+  publisher={Elsevier}
+}
+
